<resources>
    <string name="app_name">PatrickStore</string>
    <string name="login_title">Login</string>
    <string name="login_hint_username">Your Email or Phone Number</string>
    <string name="login_hint_password">Enter Password</string>
    <string name="login_recover_password"><u>Recover Password</u></string>
    <string name="login_facebook">Facebook</string>
    <string name="login_google">Gmail</string>
    <string name="login_new_user">New to PatrickStore ?</string>
    <string name="login_create_account">Create Account</string>
    <string name="login_screen">Login Screen Image</string>
    <string name="home_search_hint"><![CDATA[Search for Products, Shop, Brands & more]]></string>
    <string name="home_all_categories">All Categories</string>
    <string name="home_festival_offers">Festival Offers</string>
    <string name="daily_deals">Daily Deals</string>
    <string name="home_wholesale_market">Wholesale Market</string>
    <string name="home_business_stores">Business Stores</string>
    <string name="home_shops">Shops</string>
    <string name="home_view_all">View All</string>
    <string name="product_detail_availability">Availability</string>
    <string name="product_detail_inStock">In Stock</string>
    <string name="product_detail_reviews">reviews</string>
    <string name="product_detail_days">Days</string>
    <string name="product_detail_hours">Hours</string>
    <string name="product_detail_min">Min</string>
    <string name="product_detail_sec">Sec</string>
    <string name="product_detail_quantity">Quantity</string>
    <string name="product_detail_size">Size</string>
    <string name="product_detail_minus">-</string>
    <string name="product_detail_plus">+</string>
    <string name="product_detail_tags">Tags:</string>
    <string name="product_detail_size_chart">Size Chart</string>
    <string name="product_detail_sold_by">Sold by :</string>
    <string name="product_detail_distance">Estimate Time Of Arrival - 5km</string>
    <string name="product_detail_total_reviews">0 reviews</string>
    <string name="product_detail_seller_page">Visit Seller Page</string>
    <string name="dummy_tag">HEADPHONES</string>
    <string name="dummy_smart_pta_festival">SMART PTA FESTIVAL</string>
    <string name="tab_text_1">4445455</string>
    <string name="tab_text_2">hfdshjfgd</string>
    <string name="dummy_product_name">Mousepad logitech</string>
    <string name="dummy_food_item">Al-faham Chicken</string>
    <string name="dummy_price">₹250.00</string>
    <string name="dummy_offer_price">₹324.00</string>
    <string name="dummy_tab1">All</string>
    <string name="dummy_tab2">Mobile</string>
    <string name="dummy_tab3">Computer</string>
    <string name="dummy_tab4">Mouse</string>
    <string name="dummy_shop_name">7 Days Mini Super Market</string>
    <string name="dummy_address">Opposite priyanka fuels</string>
    <string name="dummy_count">105</string>
    <string name="dummy_products">Products</string>
    <string name="dummy_shopping_title">Mobile &amp; Laptops</string>
    <string name="dummy_food_title">FOODS &amp; BEVERAGES</string>
    <string name="dummy_product_name2">Computer Optical Mouse</string>
    <string name="alummoottil_enterprise">Alummoottil Enterprise</string>
    <string name="dummy_sold">Family Computers</string>
    <string name="_5">5</string>
    <string name="_325">325</string>
    <string name="reviews">Reviews</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="products">Products</string>
    <string name="services">Services</string>
    <string name="about">About</string>
    <string name="search_for_sellers">Search for Sellers</string>
    <string name="search_for_products">Search for Products</string>
    <string name="mousepad_logitech">Mousepad logitech</string>
    <string name="rupee_symbol">₹</string>
    <string name="_250_00">250.00</string>
    <string name="_324_00">324.00</string>
    <string name="dummy_rating">0</string>
    <string name="dummy_offer">33% OFF</string>
    <string name="dummy_day">03</string>
    <string name="dummy_hours">07</string>
    <string name="dummy_min">28</string>
    <string name="dummy_time">28</string>
    <string name="dummy_qantity">01</string>
    <string name="title">title</string>
    <string name="service_description_text">But I must explain to you how all this mistaken idea of denouncing pleasure and praising pain was born and I will give you a complete account of the system, and expound the actual teachings of the great explorer of</string>
    <string name="mobile_phone_repair_and_service">Mobile phone repair and service</string>
    <string name="loren_ipsum_text">Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum.</string>
    <string name="alummoottil_enterprise_pullad">Alummoottil Enterprise Pullad</string>
    <string name="location">Location</string>
    <string name="johnsoncijo_gmail_com">johnsoncijo@gmail.com</string>
    <string name="email">Email</string>
    <string name="_7510560337">7510560337</string>
    <string name="enquiry">Enquiry</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="contact_seller">Contact Seller</string>
    <string name="return_policy">Return Policy</string>
    <string name="dummy_quantity">01</string>
    <string name="product_detail_share_this_product">Share this Product</string>
    <string name="dummy_content">One of the major drawbacks of having a bulky headphone set it that you can’t carry it everywhere you go. But this pair of Sony wired headphones come with an easy foldable design which allow you to carry it anywhere and everywhere. Enjoy listening to music wherever you want in high-quality with these Sony headphones.</string>
    <string name="product_detail_related">Related products</string>
    <string name="tab_description">DESCRIPTION</string>
    <string name="tab_reviews">REVIEWS</string>
    <string name="nice_html">
<![CDATA[
<p>One of the major drawbacks of having a bulky headphone set it that you can’t carry it everywhere you go. But this pair of Sony wired headphones to come with an easily foldable design which allows you to carry it anywhere and everywhere. Enjoy listening to music wherever you want in high-quality with these Sony headphones.<br></p><p><b>Specifications&nbsp; &nbsp; &nbsp;</b> &nbsp; &nbsp; &nbsp; &nbsp;</p><p><b>General&nbsp; </b>&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;&nbsp;&nbsp;</p><ul><li>Model&nbsp;<span style="color: rgb(51, 51, 51); font-size: 16px;">Name:&nbsp;</span><b style="color: rgb(51, 51, 51);">MDR-ZX110AP&nbsp;</b></li><li><span style="color: rgb(51, 51, 51); font-size: 16px;">Color:<b style="color: rgb(51, 51, 51);">&nbsp;<b>Black</b><b>&nbsp;</b></b>&nbsp; &nbsp; &nbsp; &nbsp; &nbsp;&nbsp;</span>&nbsp;&nbsp;</li><li>Headphone:&nbsp;<b style="color: rgb(51, 51, 51);"><b>On the Ear</b>&nbsp;</b>&nbsp; &nbsp; &nbsp; &nbsp;</li><li>Inline&nbsp;<span style="color: rgb(51, 51, 51); font-size: 16px;">Remote:&nbsp;<b style="color: rgb(51, 51, 51);"><b>Yes</b></b></span>&nbsp; &nbsp;&nbsp;</li><li>Sales&nbsp;<span style="color: rgb(51, 51, 51); font-size: 16px;">Package</span>:<b style="color: rgb(51, 51, 51);"><b><b>1HEADSET</b><b>&nbsp;</b>&nbsp; &nbsp;</b></b></li><li>Connectivity:&nbsp;<b style="color: rgb(51, 51, 51);"><b><b>Wired</b></b></b>&nbsp; &nbsp;</li></ul><p><b>Product Details&nbsp; &nbsp;</b>&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;&nbsp;<br></p><ul><li>Deep Bass:&nbsp;<b>No</b></li><li>Circumaural/Supraaural:&nbsp;<span style="color: rgb(51, 51, 51); font-size: 16px;"><b>Circumaural</b></span></li><li>Open/Closed Back:&nbsp;<span style="color: rgb(51, 51, 51); font-size: 16px;"><b>Closed Back&nbsp;</b></span></li><li>Other Features:&nbsp;<b>SteroMiniBlack</b></li><li>Headphone Driver Units:<b>30mm</b></li><li>Type With Microphone:&nbsp;<b>Yes</b></li></ul><p><b>Sound Features</b><br></p><ul><li>Sensitivity:<b>98 dB/MW</b></li><li>Impedance:<b>20 Ohm</b></li><li>Minimum Frequency:<b>12 Hz</b></li><li>Response:<b>12 Hz&nbsp;</b></li><li>Maximum Frequency:<b>22000Hz</b></li><li>Response&nbsp; &nbsp; &nbsp;&nbsp;</li><li>Other Sound Features:&nbsp;<b>Clear and Powerful Sound</b></li></ul><p><b>Dimensions</b><br></p><ul><li>Weight Without Cord:<b>120g</b></li><li>Cord Length:<b>1.2m</b></li></ul><p><b>Warranty</b><br></p><ul><li>Warranty Summary:<b>1Year</b></li><li>Covered in Warranty:<b><span style="color: rgb(51, 51, 51); font-size: 16px;">1Year</span>&nbsp; &nbsp;</b> &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;</li><li>Not Covered in Warranty:<span style="color: rgb(51, 51, 51); font-size: 16px;"><b>1Year</b></span></li></ul>
]]>
</string>
    <string name="add_to_cart">Add to Cart</string>
    <string name="buy_now">BUY Now</string>
    <string name="ratings_reviews"><![CDATA[Ratings & Reviews]]></string>
    <string name="_4_2">4.2</string>
    <string name="_430_ratings_and_88_reviews">430 ratings and 88 reviews</string>
    <string name="does_the_job">Does the job</string>
    <string name="but_i_must_explain_to_you_how_all_this_mistaken_idea_of_denouncing_pleasure_and_praising_pain_was_born_and_i_will_give_you_a_complete_account_of_the_system_and_expound_the_actual_teachings_of_the_great_explorer_of">But I must explain to you how all this mistaken idea of denouncing pleasure and praising pain was born and I will give you a complete account of the system, and expound the actual teachings of the great explorer of</string>
    <string name="ashwani_sharma">Ashwani Sharma</string>
    <string name="food_beverages"><![CDATA[Food & Beverages]]></string>
    <string name="mobile_laptop"><![CDATA[Mobile & Laptop]]></string>
    <string name="all">All</string>
    <string name="_7_days_mini_super_market">7 Days Mini Super Market</string>
    <string name="opposite_priyank">Opposite priyanka fuels kulasekarapathy Pathanamthitta , India</string>
    <string name="_05">05</string>
    <string name="model">Model:</string>
    <string name="dummy_model">Computer Optical Mouse MDR-...</string>
    <string name="qty">Qty</string>
    <string name="remove">Remove</string>
    <string name="save_later">Save Later</string>
    <string name="price_details">Price Details</string>
    <string name="sub_total">Sub-Total</string>
    <string name="dummy_sub_total">₹250.00</string>
    <string name="dummy_tax">₹50.00</string>
    <string name="add_charge">Add Charge</string>
    <string name="delivery_charge">Service Charge</string>
    <string name="total">Total</string>
    <string name="details">Details</string>
    <string name="billing_address">Billing Address</string>
    <string name="current_location">Current Location</string>
    <string name="delivery_to">Delivery To,</string>
    <string name="change_location">Change Address</string>
    <string name="dummy_delivery_location">Iroid technologies, 2nd floor, Trust Building, Kayyath Line , Palarivatto... Kayyath Line</string>
    <string name="dummy_place">Ernakulam</string>
    <string name="dummy_mobile">8089156379</string>
    <string name="continue_shopping">Continue Shopping</string>
    <string name="checkout">Checkout</string>
    <string name="my_cart">My Cart</string>
    <string name="view_details">View Details</string>
    <string name="dummy_shopping_title2">7 Days Mini Super Market</string>
    <string name="distance_from_shop_dummy">Distance from shop - 5km</string>
    <string name="view">View</string>
    <string name="service_name">Service Name</string>
    <string name="customer_name">Customer Name</string>
    <string name="status">Status</string>
    <string name="payment_mode">Payment Mode</string>
    <string name="price_quote">Price Quote</string>
</resources>