<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="@dimen/margin_normal"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <com.google.android.material.card.MaterialCardView
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_margin="@dimen/margin_normal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/barlow_regular"
                android:textSize="@dimen/text_size_10sp"
                android:textColor="@color/black"
                android:alpha="0.5"
                android:text="@string/service_name"/>
            <TextView
                android:id="@+id/tvServiceName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/barlow_regular"
                android:textSize="@dimen/text_size_normal"
                android:textColor="@color/black"
                android:text="@string/service_name"/>
            <TextView
                android:layout_marginTop="@dimen/margin_normal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/barlow_regular"
                android:textSize="@dimen/text_size_10sp"
                android:textColor="@color/black"
                android:alpha="0.5"
                android:text="@string/qty"/>
            <TextView
                android:id="@+id/tvQty"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/barlow_regular"
                android:textSize="@dimen/text_size_normal"
                android:textColor="@color/black"
                android:text="@string/customer_name"/>

            <TextView
                android:layout_marginTop="@dimen/margin_normal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/barlow_regular"
                android:textSize="@dimen/text_size_10sp"
                android:textColor="@color/black"
                android:alpha="0.5"
                android:text="@string/status"/>
            <TextView
                android:id="@+id/tvStatus"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/barlow_regular"
                android:textSize="@dimen/text_size_normal"
                android:textColor="@color/colorGreen" />

            <TextView
                android:visibility="gone"
                android:layout_marginTop="@dimen/margin_normal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/barlow_regular"
                android:textSize="@dimen/text_size_10sp"
                android:textColor="@color/black"
                android:alpha="0.5"
                android:text="@string/payment_mode"/>
            <TextView
                android:visibility="gone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/barlow_regular"
                android:textSize="@dimen/text_size_normal"
                android:textColor="@color/colorGreen"
                android:text="@string/payment_mode"/>
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_marginTop="@dimen/margin_normal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <LinearLayout
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/tvLine"
                    android:layout_width="0dp"
                    android:orientation="vertical"
                    android:layout_height="wrap_content">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/barlow_regular"
                        android:textSize="@dimen/text_size_10sp"
                        android:textColor="@color/black"
                        android:alpha="0.5"
                        android:text="@string/price_quote"/>
                    <TextView
                        android:id="@+id/tvPriceQuote"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/barlow_bold"
                        android:textSize="@dimen/text_size_normal"
                        android:textColor="@color/black"
                        android:text="@string/dummy_price"/>
                </LinearLayout>
                <TextView
                    android:id="@+id/tvViewDetails"
                    app:layout_constraintStart_toEndOf="@+id/tvLine"
                    android:layout_width="wrap_content"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/barlow_bold"
                    android:textSize="@dimen/text_size_normal"
                    android:textColor="@color/colorPrimary"
                    android:text="@string/view_details"/>
                <TextView
                    android:id="@+id/tvLine"
                    app:layout_constraintTop_toTopOf="parent"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/barlow_regular"
                    android:textSize="@dimen/text_size_34dp"
                    android:textColor="@color/black"
                    android:text="|"
                    android:alpha="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"/>
            </androidx.constraintlayout.widget.ConstraintLayout>
        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>
