<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/llFood"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:background="@drawable/round_corner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:padding="@dimen/margin_very_small"
            android:layout_width="match_parent"
            android:layout_height="140dp"
            android:scaleType="fitCenter"
            android:src="@drawable/dummy_mouse"/>

    </LinearLayout>
    <TextView
        android:layout_marginTop="@dimen/margin_normal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dummy_food_item"
        android:singleLine="true"
        style="@style/text_view_small"/>
    <LinearLayout
        android:layout_marginTop="@dimen/margin_very_small"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <RatingBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="?android:attr/ratingBarStyleSmall"
            android:numStars="5"
            android:stepSize="0.1"
            android:isIndicator="true"
            android:rating="2.5"
            android:progressTint="@color/colorGreen"
            tools:targetApi="lollipop" />
    </LinearLayout>
    <LinearLayout
        android:layout_marginTop="@dimen/margin_very_small"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dummy_price"
            android:singleLine="true"
            style="@style/text_view_small"/>
        <TextView
            android:layout_marginStart="@dimen/margin_small"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dummy_offer_price"
            android:singleLine="true"
            style="@style/text_view_very_small"
            android:foreground="@drawable/strike_line"
            android:layout_marginLeft="@dimen/margin_small"
            tools:targetApi="m" />

    </LinearLayout>
    <com.google.android.material.button.MaterialButton
        android:layout_marginBottom="@dimen/margin_medium"
        android:layout_marginTop="@dimen/margin_medium"
        android:textSize="@dimen/text_size_small"
        android:textColor="@color/colorBlack"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/add_to_cart"
        android:textAllCaps="false"
        app:cornerRadius="6dp"
        android:textStyle="bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/colorPrimary" />

</LinearLayout>